Updated CSS files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Raul Menjivar</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
@@ -12,7 +14,7 @@
       <td><img src="images/raul.jpg" alt="Raul Profile Picture"></td>
       <td>
         <h1>Raul Menjivar</h1>
-        <p><em>Software Developer</em></p>
+        <p><em>Freelance Software Developer</em></p>
         <br>
         <p>Living in Houston, TX , I've been programming for little over a year now and am working on my Javascript skills at the time being.</p>
       </td>
